Pull #18746: Add `failOnDryRunResults` to fix rewrite